--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,6 @@
 }
 */
 
-
 .page {
   position: relative;
   display: flex;
@@ -73,6 +72,7 @@
   margin: 0;
   font-family: Raleway, sans-serif;
   background-color: #fec7ee;
+  z-index: 0;
 }
 
 .page::before {
@@ -108,9 +108,10 @@
   z-index: 1;
 }
 
-.page__title:hover {
+.page__title:hover::before {
   color: #4c4c4c;
   cursor: default;
+  z-index: 1;
 }
 
 .page__title:hover::before {
