--- a/styles/style.css
+++ b/styles/style.css
@@ -108,10 +108,10 @@
   z-index: 1;
 }
 
-.page__title:hover::before {
+.page__title:hover {
   color: #4c4c4c;
   cursor: default;
-  z-index: 1;
+  
 }
 
 .page__title:hover::before {
